evidence_library/EC2/regions/ap-south-1/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0f72fc9f503e5ae08",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b82a18d666a33c4b",
            "SecurityGroupArn": "arn:aws:ec2:ap-south-1:111111111111:security-group/sg-0f72fc9f503e5ae08",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0f72fc9f503e5ae08"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "ce925ac9-a8c1-4920-888b-c614fbdd2960",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "ce925ac9-a8c1-4920-888b-c614fbdd2960",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "961",
            "date": "Fri, 06 Feb 2026 16:25:14 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
